# handlers/put.go
@@ -9,6 +9,14 @@ import (
 	"MicroEcom/db"
 )
 
+// swagger:route PUT /products/{id} Products updateProduct
+// # UpdateProduct updates a product by ID
+// responses:
+//	 200: updateProductResponse
+//	 404: errorResponse
+//	 500: errorResponse
+
+// UpdateProduct updates a product by ID in the database
 func (p *Products) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	vars := mux.Vars(r)
 	id, er := strconv.Atoi(vars["id"])
@@ -33,4 +41,9 @@ func (p *Products) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	}
 
 	p.l.Printf("Updated Product: %#v", prod)
+
+	if err := prod.ToJson(w); err != nil {
+		http.Error(w, "unable to marshal json", http.StatusInternalServerError)
+		return
+	}
 }
